--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Have an Idea?</div>
-                <div class="intro-heading">Meet Your Collaborators!</div>
+                <div class="intro-lead-in">Have a Great Idea?</div>
+                <div class="intro-heading">Collaborate Today!</div>
                 <a href="#resume" class="page-scroll btn btn-xl">GET READY</a>
             </div>
         </div>
