--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#resume">Your Resume</a>
+                        <a class="page-scroll" href="#resume">Project Category</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#careerfair">The Career Fair</a>
+                        <a class="page-scroll" href="#careerfair">Collaborators</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#wear">What to Wear</a>
+                        <a class="page-scroll" href="#wear">Featured Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#selling">Selling Yourself</a>
+                        <a class="page-scroll" href="#selling">Chat</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#builder">Resume Builder</a>
