--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#resume">Project Category</a>
+                        <a class="page-scroll" href="#resume">Project Categories</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#careerfair">Collaborators</a>
@@ -68,7 +68,7 @@
                         <a class="page-scroll" href="#selling">Chat</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#builder">Resume Builder</a>
+                        <a class="page-scroll" href="#builder">Contact Us</a>
                     </li>
                 </ul>
             </div>
