--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <a class="page-scroll" href="#wear">Featured Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#selling">Chat</a>
+                        <a class="page-scroll" href="#selling">Donate</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#builder">Contact Us</a>
